canbus seems to be working

--- a/example-crawler.conf
+++ b/example-crawler.conf
@@ -7,6 +7,8 @@ host = localhost
 port = 1883
 publishTopic = /crawler/status
 listenTopic = /crawler/command
+username = me
+userpass = hello
 
 [websockets]
 host = 0.0.0.0
