tons of changes over the time. new mqtt-can bridge and video streamig

--- a/example-crawler.conf
+++ b/example-crawler.conf
@@ -1,12 +1,9 @@
-[serial]
-port = /dev/ttyACM0
-baudRate = 115200
-
 [mqtt]
 host = localhost
 port = 1883
 publishTopic = /crawler/status
 listenTopic = /crawler/command
+baseTopic = rutler/
 username = me
 userpass = hello
 
